--- a/app/src/main/res/layout/f_second.xml
+++ b/app/src/main/res/layout/f_second.xml
@@ -6,8 +6,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivIcon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
         android:transitionName="large_icon"
         app:srcCompat="@drawable/gitlab" />
 
